@@ -388,6 +388,14 @@
 			<BR>
 		</TD>
 	</TR>
+        <TR>
+                <TD WIDTH="100%" COLSPAN="2">
+                        <B>{trans("Comments:")}</B><BR>
+			<BLOCKQUOTE>
+			{$invoice.comment}
+			</BLOCKQUOTE>
+		</TD>
+        </TR>
 </TABLE>
 </TD>
 </TR>
