@@ -160,6 +160,12 @@ window.open('?m=invoice&id={$newinvoice.invoice}&original={$newinvoice.original}
 			<select id="customer_addresses" name="invoice[recipient_address_id]"></select>
 		</td>
 	</tr>
+	<tr>
+		<td class="bold">{trans("Comments:")}</td>
+		<td>
+			<TEXTAREA NAME="invoice[comment]" ROWS="4" COLS="50" {tip text="Enter invoice comment"}>{$invoice.comment}</TEXTAREA>
+		</td>
+	</tr>
 	<TR>
 		<TD class="text-right" colspan="2">
 			<A href="javascript:saveheader();">{trans("Submit")} <IMG src="img/save.gif" alt=""></A>
